backport to java 8 - probably that's it